# jpype

./: .bumpversion.cfg  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG.rst  CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  PKG-INFO  README.md  README.rst  android.sh  appveyor.yml  azure-pipelines.yml  build.gradle  buildozer.spec  codecov.yml  coverage.sh  dev-requirements.txt  dev.mk  doc-requirements.txt  forward.py  helloworld.c  ivy.xml  lgtm.yml  pyproject.toml  resolve.sh  reverse.py  setup.cfg  setup.py  test-requirements.txt  test.py  testDoc.py  testMemoryCompiler.py  test_bridge.py  test_input.py  (+1 more)
.azure/: build.yml  check.sh  doc-requirements.txt  release.yml
.azure/resources/: build.gradle
.azure/scripts/: build-wheels.sh  coverage.yml  debug.yml  deps.yml  documentation.yml  download-java-deps.yml  ivy.yml  jdk.yml  osx-python.sh  pip-caching.yml  publish-dist.yml  python.yml  sccache.yml  sdist.yml  test.yml  tracing.yml  wheels-linux.yml  wheels.yml
.github/workflows/: codeql.yml  conda-bld.yml  mypy.yml
_jpype-stubs/: __init__.pyi
appveyor/: deploy_pypi.ps1  install.ps1  install.sh  install_conda.cmd  install_cygwin.cmd  runTestsuite.ps1  runTestsuite.sh  run_with_env.cmd  upload.ps1
bridge/: nbactions.xml  pom.xml
cmake/: config_window.cmake
devtools/: install_miniconda.sh
devtools/conda-recipe/: build.sh  compile.py  compile_java_classes.py  conda_build_config.yaml  meta.yaml  run_test.py
doc/: CHANGELOG.rst  CHANGELOG.rst.orig  ChangeLog-0.7.2.rst  ChangeLog-0.7.md  ChangeLog-0.7.rst  ChangeLog-0.8.rst  Makefile  add_labels.py  android.rst  api.rst  boilerplate.txt  bridge.md  caller_sensitive.rst  conf.py  dbapi2.rst  develguide.rst  doc-requirements.txt  extension.rst  imports.rst  index.rst  install.rst  make.bat  quickguide.py  quickguide.rst  quickquide.html  quickquide.py  quickquide.rst  release.rst  userguide.html  userguide.rst
doc/_static/: theme_overrides.css
doc/java/: __init__.py  lang.py  util.py
docker/: README  build.sh  build_windows.sh  run.sh
examples/: inspectConvert.py  rmi.py
examples/jms/: README.TXT  testJpypePublisher.py  testJpypeSubscriber.py
examples/linux/: README.TXT  findjvm.py  jpype.sh
examples/stubs/: README  buf_leak_test.py  buf_leak_test3.py  bulletproof.py  convtest.py  findjvm.py  java_dom.py  java_sax.py  lists_and_maps.py  python_dom.py  test_awt.py  test_jarray_fixes.py  testlucene.py
jpype/: ._jclass.py.swo  JClassUtil.py  __init__.py  _bootstrap.py  _classpath.py  _core.py  _core.pyi  _cygwin.py  _darwin.py  _gui.py  _jannotation.py  _jarray.py  _jarray.pyi  _jboxed.py  _jbridge.py  _jclass.py  _jcollection.py  _jcollection.pyi  _jcomparable.py  _jcontext.py  _jcustomizer.py  _jexception.py  _jforward.py  _jinit.py  _jio.py  _jio.pyi  _jmethod.py  _jobject.py  _jpackage.py  _jproxy.py  _jstring.py  _jstring.pyi  _jthread.py  _jthread.pyi  _jtypes.py  _jvmfinder.py  _jwrapper.py  _linux.py  _properties.py  _pykeywords.py  (+14 more)
jpype/_pyinstaller/: entry_points.py  example.py  hook-jpype.py  test_jpype_pyinstaller.py
jpype/awt/: __init__.py
jpypex/: __init__.py
jpypex/swing/: AbstractAction.py  __init__.py  pyutils.py
native/: .ant-targets-build.xml  build.xml  build_coverage.xml
native/bootstrap/: ejp_natives.cpp
native/common/: jp_array.cpp  jp_arrayclass.cpp  jp_baseclasses.cpp  jp_booleantype.cpp  jp_boxedclasses.cpp  jp_boxedtype.cpp  jp_bridge.cpp  jp_buffer.cpp  jp_buffertype.cpp  jp_bytetype.cpp  jp_chartype.cpp  jp_class.cpp  jp_classbase.cpp  jp_classhints.cpp  jp_classloader.cpp  jp_classtype.cpp  jp_cleaner.cpp  jp_context.cpp  jp_context.h  jp_convert.cpp  jp_doubletype.cpp  jp_encoding.cpp  jp_env.cpp  jp_exception.cpp  jp_extension.cpp  jp_field.cpp  jp_floattype.cpp  jp_functional.cpp  jp_gc.cpp  jp_hostref.cpp  jp_interfacetype.cpp  jp_inttype.cpp  jp_javaenv.cpp  jp_javaframe.cpp  jp_jcharstring.cpp  jp_jniutil.cpp  jp_longtype.cpp  jp_main.cpp  jp_member.hpp  jp_method.cpp  (+28 more)
native/embedded/: ejp_natives.cpp
native/java/: manifest.txt  module-info.java
native/jni_include/: jni.h
native/jpype_module/: f  licenseheader.txt  logging.properties  nb-configuration.xml  nbactions.xml  pom.xml  run.bat  run.sh  test.sh
native/main/: main.c  main.cpp
native/python/: jp_pythonenv.cpp  jp_pythontypes.cpp  jpype_javaarray.cpp  jpype_javaclass.cpp  jpype_javanio.cpp  jpype_memory_view.c  jpype_memory_view.cpp  jpype_module.cpp  jpype_python.cpp  py_class.cpp  py_field.cpp  py_hostenv.cpp  py_method.cpp  py_monitor.cpp  pyjp_array.cpp  pyjp_buffer.cpp  pyjp_char.cpp  pyjp_class.cpp  pyjp_classhints.cpp  pyjp_classmeta.cpp  pyjp_context.cpp  pyjp_exception.cpp  pyjp_extension.cpp  pyjp_field.cpp  pyjp_method.cpp  pyjp_module.cpp  pyjp_monitor.cpp  pyjp_number.cpp  pyjp_object.cpp  pyjp_package.cpp  pyjp_proxy.cpp  pyjp_value.cpp  pythonenv.cpp
project/: README.md  dev.mk  mark.py  requirements.txt  update.sh
project/ant/: pom.xml
project/conda_recipe/: README.md  conda_build_config.yaml  meta.yaml
project/coverage/: example.py  pom.xml
project/jars/: README
project/jpype_cpython/: Makefile.linux
project/jpype_java/: build.xml  extractJNI.py  manifest.mf  nb-configuration.xml  pom.xml  test.sh
project/late/: build.sh
project/mrjar/: README  build.sh
project/snippet/: assertRaises.py
project/utility/: alter.py  remove.py  testDoc.py  testMemoryExh.py
setupext/: __init__.py  build_exe.py  build_ext.py  build_java.py  build_makefile.py  build_thunk.py  develop.py  dist.py  editable_wheel.py  extension.py  makefile.py  platform.py  pytester.py  sdist.py  test_java.py  utils.py  wheel.py  wheelc.py
test/: buf_leak_test.py  buf_leak_test3.py  build.xml  bulletproof.py  convtest.py  findjvm.py  java_dom.py  java_sax.py  lists_and_maps.py  python_dom.py  stub.py  testConvert.py  test_awt.py  test_jarray_fixes.py  testlucene.py  testsuite.py  transform_xunit_to_appveyor.xsl
test/jar/: README
test/jpypetest/: __init__.py  array.py  attr.py  exc.py  (+155 more)
thunk/: README  dumpclass.py
thunk2/: README  build.xml
(+973 files in other folders)
