[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "jpype1"
version = '1.6.1.dev0'
authors = [
    {name = "Steve Menard", email = "devilwolf@users.sourceforge.net"},
]
maintainers = [
    {name = "Luis Nell", email = "cooperate@originell.org"},
]
description = "A Python to Java bridge"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: Apache Software License',
]
dependencies = [
    'packaging',
]


[project.optional-dependencies]

docs = [
    'readthedocs-sphinx-ext',
    'sphinx',
    'sphinx-rtd-theme',
]
tests = [
    "pytest",
]


[project.entry-points.pyinstaller40]
"hook-dirs" = "jpype._pyinstaller.entry_points:get_hook_dirs"
"tests" = "jpype._pyinstaller.entry_points:get_PyInstaller_tests"


[project.urls]
homepage = "https://github.com/jpype-project/jpype"


[[tool.mypy.overrides]]
module = [
    "_jpype",
    "commonx",
    "brokenx",
    "java.*",
    "jpypex.common",
    "jedi",
    "jedi.access",
]

ignore_missing_imports = true # todo: this should be false, add a proper _jpype.pyi file

[tool.pytest]
addopts = "--verbose"
testpaths = ["test", "jpype/_pyinstaller"]


[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.packages = ["jpype", "jpype._pyinstaller", "_jpype"]
editable.mode = "inplace"
# todo: try out automatic rebuild feature.
#editable.rebuild = true

sdist.exclude = [".azure", ".github"]

